package it.unicam.cs.ids.hackhub.entity;

public enum RuoloStaff {
    Organizzatore,
    Giudice,
    Mentore
}
