package it.unicam.cs.ids.hackhub.state;

public abstract class Stato {

    public abstract boolean iscrizioneConsentita();

    public abstract boolean sottomissioneConsentita();

    public abstract boolean valutazioneConsentita();
}
